Bug 43077 - PIVOTTABLE: Copying a sheet with a pivot table copies the pivot table as data
Summary: PIVOTTABLE: Copying a sheet with a pivot table copies the pivot table as data
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-18 12:41 UTC by Jeroen Mostert
Modified: 2012-01-12 23:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
"Sheet1" contains base data, "Pivot1" contains the working pivot table, "Pivot1_2" is the nonfunctional copy. (13.12 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-11-18 12:41 UTC, Jeroen Mostert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeroen Mostert 2011-11-18 12:41:07 UTC
Created attachment 53677 [details]
"Sheet1" contains base data, "Pivot1" contains the working pivot table, "Pivot1_2" is the nonfunctional copy.

Problem description: 
Copying a sheet in its entirety doesn't copy pivot tables properly -- the cells are copied, including formatting, but none of the pivot selection fields work and there is no "edit 
layout" option.

Steps to reproduce:
1. In the sheet selection area, right-click on a sheet that contains a pivot table and choose "Move/Copy Sheet".
2. For "Action", choose "Copy".
3. Click "OK".

Current behavior:
A new sheet is created that looks just like the original, but it doesn't contain a pivot table. It contains a copy of the contents and formatting of the table. Filter fields are transferred as non-functional table filter dropdowns. If you save the workbook and reopen it, the drop-downs disappear altogether and only the data is left.

Expected behavior:
A new sheet is created with exactly the same contents as the old sheet, including any special functionality like pivot tables.

Platform (if different from the browser): 
Windows 7 Home Premium 64-bit (running 32-bit LibreOffice)
Comment 1 Jeroen Mostert 2011-11-18 14:47:35 UTC
Upgraded; verified the same behavior is present in 3.4.4.
Comment 2 Kohei Yoshida 2012-01-10 22:21:33 UTC
Confirming.
Comment 3 Kohei Yoshida 2012-01-10 22:22:50 UTC
I'll look into it.
Comment 4 Kohei Yoshida 2012-01-12 23:57:15 UTC
This is now fixed.  The fix will be in 3.5 RC1.