fdo#43077: Copy pivot tables when a sheet is copied.